--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "nuxt-app",
-  "type": "module",
+  "name": "labaig-portfolio",
+  "version": "1.0.0",
+  "description": "Portfolio interactivo LABAIG con efectos 3D",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "preview": "nuxt preview"
   },
   "dependencies": {
-    "@tresjs/cientos": "^5.1.0",
-    "@tresjs/nuxt": "^5.1.0",
-    "@tresjs/post-processing": "^3.1.0",
-    "gsap": "^3.13.0",
-    "nuxt": "^4.1.3",
-    "postprocessing": "^6.37.8",
-    "three": "^0.180.0",
-    "three-stdlib": "^2.36.0",
-    "vanilla-tilt": "^1.8.0",
-    "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@tresjs/core": "^4.3.4",
+    "@tresjs/nuxt": "^3.0.1",
+    "nuxt": "^3.15.1",
+    "three": "^0.171.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0"
+    "@types/three": "^0.171.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
